<resources>
    <string name="app_name">Loodos BitcoinTicker</string>

    <!--GENERAL-->
    <string name="or">Or</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="active">Active</string>
    <string name="passive">Passive</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!--LOGIN & SIGNUP-->
    <string name="enter_email">Enter your email address</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_password_again">Enter your password again</string>
    <string name="sing_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="all_fi_must_filled">All fields must be filled for registration</string>
    <string name="all_fi_have_filled">You have to fill in all fields to log in</string>
    <string name="valid_email_adress">Please enter a valid e-mail address</string>
    <string name="pass_must_6_digits">Your password must be more than 6 digits</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="signup_success">Registration was successful. You can log in after confirming your account with the incoming mail.</string>
    <string name="login">Login</string>
    <string name="account_not_approved">Your account has not been approved. Would you like to receive a confirmation email again?
    </string>

    <!--COINS & FAVORITES-->
    <string name="coins">Coins</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>

    <!--WARNING MESSAGES-->
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="no_internet">There is no internet connection</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="not_found_favorite_data">No data saved in favorites found!</string>

    <!--COIN DETAIL-->
    <string name="coin_detail">Coin Detail</string>
    <string name="price">Price</string>
    <string name="change_24_hours">Change in the last 24 hours</string>
    <string name="not_found_24_hours">No data found for the last 24 hours</string>
    <string name="hashing_algorithm">Hashing Algorithm</string>
    <string name="hash_algorithm_not_found">Hashing algorithm not found</string>
    <string name="description">Description</string>
    <string name="description_not_found">Description not found</string>
    <string name="page_refresh_frequency">Data refresh frequency</string>

    <!--DIALOG-->
    <string name="exit_question">Are you sure you want to exit the application?</string>
    <string name="renewal_frequency_status">Renewal frequency status</string>
    <string name="refresh_frequency">Refresh frequency (Seconds)</string>
    <string name="second_not_empty">Second field cannot be empty or 0</string>
    <string name="warning">WARNING</string>
    <string name="exit_account">EXIT FROM ACCOUNT</string>
    <string name="exit_account_question">Are you sure you want to exit the account?</string>
    <string name="mail_send_again">Confirmation email sent again</string>

</resources>