<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    android:background="@drawable/shape_line_12dp_dark_gray"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    android:visibility="gone">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="error.json"
        app:lottie_loop="true" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/something_went_wrong"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:fontFamily="@font/inter_medium" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/cyan"
        android:textSize="24sp"
        app:fontFamily="@font/inter_bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_internet"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:fontFamily="@font/inter_medium" />

</androidx.appcompat.widget.LinearLayoutCompat>
