<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootExit"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bottom_sheet"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="24dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_exit" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/exit_question"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:fontFamily="@font/inter_semibold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnExitYes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_12dp_cyan_color"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/yes"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:fontFamily="@font/inter_semibold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnExitNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@android:color/transparent"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/no"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:fontFamily="@font/inter_semibold" />

</androidx.appcompat.widget.LinearLayoutCompat>