<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_main_color"
    android:orientation="vertical"
    tools:context=".app.ui.activity.login.LoginActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:srcCompat="@drawable/ic_add_person" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_12dp_app_second_color">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmailSignUp"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="hamdullahkalay@hotmail.com"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@android:color/transparent"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textCursorDrawable="@color/cyan"
                android:textSize="14sp"
                app:fontFamily="@font/inter_medium" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_12dp_app_second_color">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPasswordSignUp"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="123456"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_toStartOf="@+id/imgShowHidePasswordSignUp"
                android:background="@android:color/transparent"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textCursorDrawable="@color/cyan"
                android:textSize="14sp"
                app:fontFamily="@font/inter_medium" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/imgShowHidePasswordSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:background="@android:color/transparent"
                android:foreground="?android:attr/selectableItemBackground"
                app:srcCompat="@drawable/ic_hide_password" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_12dp_app_second_color">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPasswordAgain"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="123456"
                android:layout_toStartOf="@+id/imgShowHidePasswordAgainSignUp"
                android:background="@android:color/transparent"
                android:hint="@string/enter_password_again"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textCursorDrawable="@color/cyan"
                android:textSize="14sp"
                app:fontFamily="@font/inter_medium" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/imgShowHidePasswordAgainSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:background="@android:color/transparent"
                android:foreground="?android:attr/selectableItemBackground"
                app:srcCompat="@drawable/ic_hide_password" />

        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llSave"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_12dp_cyan_color"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_save" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:includeFontPadding="false"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:fontFamily="@font/inter_semibold" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUpCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:color/transparent"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:fontFamily="@font/inter_bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        android:id="@+id/loadingProgressSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone"
        tools:visibility="visible" />

</RelativeLayout>